# beholder

./: Cargo.toml  Dockerfile  LICENSE  README.md  default.nix  diesel.toml  flake.nix
migrations/2021-12-03-103906_create_market_type/: down.sql  up.sql
migrations/2021-12-03-104122_create_binance_klines/: down.sql  up.sql
migrations/2021-12-03-104712_create_binance_klines_view/: down.sql  up.sql
migrations/2021-12-03-111603_create_binance_klines_view_1d/: down.sql  up.sql
migrations/2021-12-03-111835_create_binance_klines_view_1d_spot/: down.sql  up.sql
migrations/2021-12-03-111850_create_binance_klines_view_1d_usdm/: down.sql  up.sql
migrations/2021-12-15-111840_create_binance_open_interest_summaries/: down.sql  up.sql
migrations/2021-12-15-112451_create_binance_open_interest_summaries_view/: down.sql  up.sql
migrations/2021-12-15-162002_create_binance_open_interest_summaries_view_1d/: down.sql  up.sql
migrations/2021-12-15-180654_create_binance_klines_view_15m/: down.sql  up.sql
migrations/2021-12-16-195324_drop_views/: down.sql
migrations/2021-12-16-210741_create_views/: down.sql  up.sql
src/: binance.rs  main.rs  result.rs  schema.rs
tests/assets/: kline_queries_1.csv  kline_queries_2.csv  kline_queries_3.csv
