[package]
name = "beholder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
diesel = { version = "~1.4.4", features = ["postgres"] }
clap = { version = "~3.0.0-rc.4", features = ["derive"] }
csv = "~1.1"
serde = { version = "~1.0.130", features = ["derive"] }
log = "~0.4"
stderrlog = "~0.5"
