[package]
name = "beholder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = "~0.18.1"
diesel = { version = "~1.4.4", features = ["postgres"] }
clap = { version = "~3.2.1", features = ["derive"] }
csv = "~1.1"
serde = { version = "~1.0.130", features = ["derive"] }
log = "~0.4"
stderrlog = "~0.5"
chrono = { version = "~0.4", features = ["unstable-locales"] }
